[package]
name = "w25519"
version = "0.1.0"
edition = "2018"

[dependencies]
# curve25519-dalek = { path = "../curve25519-dalek", default-features = false, features = ["weierstrass"] }
# x25519-dalek = { path = "../x25519-dalek", default-features = false }
# rand_core = { version = "0.5", default-features = false }
# our_serde = { package = "serde", version = "1", default-features = false, optional = true, features = ["derive"] }
# zeroize = { version = "=1.3", default-features = false, features = ["zeroize_derive"] }

# [features]
# default = ["std", "u64_backend"]
# serde = ["our_serde", "curve25519-dalek/serde", "x25519-dalek/serde"]
# std = ["curve25519-dalek/std", "x25519-dalek/std"]
# nightly = ["curve25519-dalek/nightly", "x25519-dalek/nightly"]
# reusable_secrets = ["x25519-dalek/reusable_secrets"]
# u64_backend = ["curve25519-dalek/u64_backend", "x25519-dalek/u64_backend"]
# u32_backend = ["curve25519-dalek/u32_backend", "x25519-dalek/u32_backend"]
# fiat_u64_backend = ["curve25519-dalek/fiat_u64_backend", "x25519-dalek/fiat_u64_backend"]
# fiat_u32_backend = ["curve25519-dalek/fiat_u32_backend", "x25519-dalek/fiat_u32_backend"]